# ai-research-system

./: .gitignore  Dockerfile  README.md  conftest.py  pyproject.toml
backend/: .env.example  main.py
backend/api/: routes_auth.py  routes_research.py
backend/src/: auth.py  config.py  logging.py  metrics.py
backend/src/pipeline/: agents.py  pipeline.py  tools.py
frontend/: app.py
frontend/.streamlit/: config.toml
monitoring/: prometheus.yml
tests/: test_auth.py  test_research.py
