[project]
name = "ai-research-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.9.0",
    "beautifulsoup4>=4.12.0",
    "fastapi>=0.136.1",
    "groq>=0.5.0",
    "html5lib>=1.1",
    "httpx>=0.28.1",
    "langchain>=0.2.0",
    "langchain-community>=0.2.0",
    "langchain-core>=0.2.0",
    "langchain-groq>=0.1.0",
    "langchain-openai>=0.1.0",
    "langgraph>=1.1.10",
    "lxml>=5.0.0",
    "openai>=1.30.0",
    "orjson>=3.9.0",
    "pandas>=2.0.0",
    "passlib[bcrypt]>=1.7.4",
    "prometheus-client>=0.25.0",
    "prometheus-fastapi-instrumentator>=7.1.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.14.0",
    "pytest>=9.0.3",
    "pytest-anyio>=0.0.0",
    "python-dotenv>=1.0.0",
    "python-jose[cryptography]>=3.5.0",
    "python-json-logger>=4.1.0",
    "python-multipart>=0.0.27",
    "requests>=2.31.0",
    "rich>=13.7.0",
    "streamlit>=1.57.0",
    "tavily-python>=0.3.0",
    "tenacity>=8.2.0",
    "tiktoken>=0.6.0",
    "uvicorn>=0.46.0",
]
